PDF-87 Fixed bug with bottom line on mobile screen

--- a/drupal/web/themes/custom/palette_de_fleurs/css/style.css
+++ b/drupal/web/themes/custom/palette_de_fleurs/css/style.css
@@ -7681,7 +7681,8 @@ body.path-frontpage .par-back-wrapper {
   #drupal-modal--dialog {
     margin: auto;
     background-color: #ffffff;
-    position: relative; }
+    position: relative;
+    min-height: 100%; }
     #drupal-modal--dialog:after {
       content: '';
       border: 2.5px solid #000000;
