--- a/drupal/web/themes/custom/palette_de_fleurs/scss/blocks/_product_variations.scss
+++ b/drupal/web/themes/custom/palette_de_fleurs/scss/blocks/_product_variations.scss
@@ -235,6 +235,7 @@
     margin: auto;
     background-color: $white;
     position: relative;
+    min-height: 100%;
 
     &:after {
       content: '';
